[package]
name = "sha2-chain-jolt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[dependencies]

jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
    "guest-std",
] }
sha2 = { version = "0.10.8", default-features = false }

[features]
guest = []
