[package]
version = "0.1.0"
name = "tendermint-jolt"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.37.0", default-features = false }
tendermint-light-client-verifier = { version = "0.37.0", default-features = false, features = [
    "rust-crypto",
] }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
    "guest-std",
] }


[features]
guest = []
